fix: alignment of author block text

--- a/src/components/index/author-intro-block.module.css
+++ b/src/components/index/author-intro-block.module.css
@@ -25,7 +25,7 @@
     text-align: center;
     font-style: italic;
     width: 85%;
-    margin: 0;
+    margin: auto;
 }
 
 @media only screen and (min-width: 700px) {
